--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ background-size: auto, cover;
 background-repeat: no-repeat;
   min-height: 100vh;
   overflow-x: hidden;
-  background-color: #f0dc8b;
+  background-color: #ffffff;
 }
 .meow
 {
@@ -30,8 +30,9 @@ background-repeat: no-repeat;
   height: 300;
   width: 400;
   left: 500;
-  background: #fff;
-  border-radius: 7px;
+  background: #807d78;
+  border-style:solid;
+  border-width: 5px;
   z-index: 10;
   mix-blend-mode: initial;
   opacity: 1;
@@ -43,8 +44,9 @@ background-repeat: no-repeat;
   height: 300;
   width: 400;
   left: 20;
-  background: #ffffff;
-  border-radius: 7px;
+  border-style:solid;
+  border-width: 5px;
+  background: #807d78;
   z-index: 10;
   mix-blend-mode: initial;
   opacity: 1;
@@ -56,8 +58,9 @@ background-repeat: no-repeat;
   height: 300;
   width: 400;
   left: 940;
-  background: #ffffff;
-  border-radius: 7px;
+  background: #807d78;
+  border-style:solid;
+  border-width: 5px;
   z-index: 10;
   mix-blend-mode: initial;
   opacity: 1;
@@ -67,14 +70,36 @@ background-repeat: no-repeat;
   .meow {
     height: 780;
     width: 380;
-    left: 620;
+    left: 350;
   }
-@media screen and (max-width:768) {
+  .Beef {
+    height: 300;
+    width: 500;
+    left: 180;
+  }
+  .main2 {
+    height: 300;
+    width: 500;
+    left: 180;
+    top: 480;
+  }
+  .Rice {
+    height: 300;
+    width: 500;
+    left: 180;
+    top: 810;
+  }
+}
+@media screen (max-width:768) {
   .meow {
-    height: 780;
-    width: 380;
-    left: 200;
+    left: 0;
+    top: 20;
   }
+  .main2 {
+    width: 200;
+    height: 300;
+  }
+}
 section {
   position: relative;
   width: 100%;
